# Rag-Chatbot-Humanoid-Rebotics-Book

./: .gitignore  README.md  vercel.json
Humanoid-robotics-book/: info.md
api/: FastAPI  app.py  app_backup.py  app_backup_old.py  main.py  pyproject.toml  rag_code.py  requirements.txt  vercel.json
backend/: services.py
docs-site/src/components/ChatbotWidget/: index.tsx  styles.module.css
docs-site/src/components/HomepageFeatures/: index.tsx  styles.module.css
docs-site/src/css/: custom.css
docs-site/src/pages/: index.css  index.module.css  index.tsx  styles.module.css
